# FastAPI-Redis-Idempodent-API

./: README.md  pyproject.toml
app/: .env.template  config.py  events.py  logger.py  main.py  middlewares.py  routers.py  settings.py  utils.py
app/exceptions/api/: base.py
app/routes/: api.py  checkout.py  idempotent.py  redis.py  root.py
app/services/: idempotent_service.py  stripe.py
app/services/redis/: service.py
app/services/redis/credential_providers/: iam.py  ssm.py
static/: script.js
templates/: cancel.html  index.html  success.html
